# website

./: .bandit.yml  .dockerignore  .env.example  .eslintrc.js  .flake8  .gitignore  .prettierignore  .yamllint.yml  Pipfile  apple.css  apple.html  codegen.yml  common.yml  docker-compose.override.yml.example  docker-compose.yml  mypy.ini  package.json  prod.yml  pyproject.toml  readme.md  requirements.txt  riotfile.py  staging.yml  tsconfig.json  webpack.dev.js  webpack.prod.js
.github/workflows/: cd.yml  ci.yml  comment-deploy-dash  comment-deploy-dash.yml
chat/: consumers.py  models.py  routing.py  urls.py
chat/migrations/: 0009_delete_chatlog.py  0010_auto_20210614_0242.py
chat/templates/: chat.html  chat.js
chat/templatetags/: chat_tags.py
church/: admin.py  consumers.py  email.py  forms.py  models.py  urls.py  views.py
church/migrations/: 0024_auto_20210314_2040.py  0025_auto_20210428_0208.py  0025_auto_20210601_2348.py
church/templatetags/: feed.py
comments/: urls.py  views.py
comments/templatetags/: comments.py
crossroads/: asgi.py  auth.py  consumers.py  context_processors.py  dd.py  ddlogs.py  schema.py  urls.py
crossroads/settings/: base.py  dev.py  prod.py  staging.py
docker/datadog/: Dockerfile
docs/: orgs.md
polls/: consumers.py  models.py
prayer/: models.py  urls.py  views.py
prod/: nginx.conf  trace_nginx.sh
utils/: views.py
web/: About.tsx  App.tsx  Auth.tsx  Error.tsx  Giving.tsx  Home.tsx  Prayer.tsx  Service.tsx  Services.tsx  Title.tsx  Websocket.tsx  generated-types.ts  index.html  index.tsx  schema.json  utils.tsx
(+25 files in other folders)
